[package]
name = "mesh-global"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
force_global_mesh = [ "mesh" ]

[dependencies]
mesh = { path = "..", optional = true }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
mesh = { path = "..", optional = false }
